[package]
name = "rcon-rs"
description = "barebones async rcon implementation in rust for Minecraft"
version = "0.2.0"
edition = "2021"
authors = ["Sean Ray <seanray410@gmail.com>"]
license-file = "./LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.54"
tokio = { version = "1.17.0", features = ["net", "sync", "io-std", "rt", "rt-multi-thread", "macros"] }
